# BirchVault

./: .cursorrules  .gitignore  .prettierrc  README.md  create-icons.mjs  create-icons.ps1  create-png-icon.mjs  download-icon.ps1  fetch-icon.mjs  generate-icon.mjs  get-tauri-icon.mjs  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.birchdev/: history.json
.github/workflows/: release.yml
apps/desktop/: CHANGELOG.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  config.ts  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  db.rs  error.rs  main.rs  sync.rs
apps/desktop/src/hooks/: index.ts  useAutoLock.ts  useUpdater.ts
apps/desktop/src/layouts/: AppLayout.tsx  AuthLayout.tsx  index.ts
apps/desktop/src/pages/: index.ts
apps/desktop/src/pages/auth/: LoginPage.tsx  RegisterPage.tsx  UnlockPage.tsx  index.ts
apps/desktop/src/pages/settings/: SettingsPage.tsx  index.ts
apps/desktop/src/pages/vault/: VaultEditPage.tsx  VaultNewPage.tsx  VaultPage.tsx  VaultTrashPage.tsx  index.ts
apps/desktop/src/store/: auth.ts  index.ts  settings.ts  vault.ts
apps/extension/: package.json  popup.tsx  style.css  tailwind.config.js  tsconfig.json
apps/extension/contents/: autofill.ts
apps/host/: index.html  package-lock.json  package.json  tailwind.config.js
apps/host/scripts/: install-service.ps1
apps/host/src/: App.tsx  index.css
apps/host/src-service/: Cargo.toml
apps/host/src-service/src/: main.rs
apps/host/src-tauri/: Cargo.toml  tauri.conf.json
apps/host/src-tauri/src/: job_logs.rs  lib.rs  main.rs  runner.rs  system_info.rs
apps/host/src/components/: JobCard.tsx  JobDetail.tsx  LogViewer.tsx  Sidebar.tsx  StatusCard.tsx  SyncWrapper.tsx
apps/host/src/pages/: Dashboard.tsx  Jobs.tsx  Logs.tsx  Machines.tsx  Settings.tsx
apps/host/src/store/: useRunnerStore.ts
apps/launcher/: env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/launcher/src/: App.tsx  index.css
apps/launcher/src-tauri/: Cargo.toml  tauri.conf.json
apps/launcher/src-tauri/capabilities/: default.json
apps/launcher/src-tauri/src/: main.rs  sync.rs
apps/launcher/src/components/: SyncWrapper.tsx
apps/launcher/src/store/: launcher.ts
apps/mobile/: app.json  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  index.tsx
apps/web/: env.local.example  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/(app)/organisations/: page.tsx
apps/web/src/app/(app)/organizations/: page.tsx
apps/web/src/app/(app)/settings/: page.tsx
apps/web/src/app/(app)/settings/subscription/: page.tsx
apps/web/src/app/(app)/unlock/: page.tsx
apps/web/src/app/(app)/vault/: page.tsx
apps/web/src/app/(app)/vault/new/: page.tsx
apps/web/src/app/(app)/vault/trash/: page.tsx
apps/web/src/app/(auth)/confirm-email/: page.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(auth)/register/: page.tsx
apps/web/src/app/admin/: layout.tsx  page.tsx
apps/web/src/app/api/account/delete/: route.ts
apps/web/src/app/api/account/restore/: route.ts
apps/web/src/app/api/admin/users/: route.ts
apps/web/src/app/api/auth/send-verification/: route.ts
apps/web/src/app/api/stripe/checkout/: route.ts
apps/web/src/app/api/stripe/portal/: route.ts
apps/web/src/app/auth/callback/: route.ts
apps/web/src/app/auth/confirmed/: page.tsx
apps/web/src/app/auth/restore-account/: page.tsx
apps/web/src/app/pricing/: page.tsx
apps/web/src/components/: ConfirmDialog.tsx  ThemeProvider.tsx  UpgradePrompt.tsx
apps/web/src/hooks/: useSubscription.ts  useTheme.ts
apps/web/src/lib/: auth.ts  email.ts  stripe.ts  supabase.ts
apps/web/src/store/: auth.ts  vault.ts
docker/: Dockerfile.web  docker-compose.yml  env.example  kong.yml
scripts/: bootstrap.ps1
supabase/: config.toml  seed.sql
supabase/migrations/: 20240101000000_initial_schema.sql  20240102000000_add_2fa_tables.sql  20240103000000_add_sharing_tables.sql  20240104000000_add_email_confirmation_sync.sql  20240105000000_add_subscriptions.sql  20240106000000_add_plan_override.sql  20240107000000_add_trash_support.sql  20240108000000_add_account_soft_delete.sql  20240109000000_optimize_rls_policies.sql  20240110000000_add_missing_fkey_indexes.sql  20240111000000_add_apikey_type.sql  20240112000000_add_document_storage.sql  20240112000000_add_theme_to_profiles.sql  20241205000000_rename_vault_tables.sql  20241205000001_add_birch_sync_tables.sql
(+3 files in other folders)
