[package]
name = "birch-host"
version = "1.0.0"
description = "Birch Host - GitHub Actions Runner Manager"
authors = ["Birch"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "process"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
regex = "1.10"
dirs = "5.0"
sysinfo = "0.32"
windows = { version = "0.58", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_System_JobObjects", "Win32_Security"] }

# Sync utilities
uuid = { version = "1.6", features = ["v4"] }
hostname = "0.3"
rand = "0.8"
pbkdf2 = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.21"
tauri-plugin-dialog = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

